<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/vikunja_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/vikunja_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vikunja"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/White_Text"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/apiURL"
        android:layout_width="377dp"
        android:layout_height="58dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:inputType="textUri"
        android:text="@string/login_apiURL_hint"
        android:textColor="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/username"
        android:layout_width="377dp"
        android:layout_height="58dp"
        android:layout_marginBottom="416dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/login_username_hint"
        android:textColor="@color/hint_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="username" />

    <TextView
        android:id="@+id/apiLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/apiURL"
        android:text="@string/login_apiURL_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/White_Text"
        app:layout_constraintBottom_toTopOf="@+id/apiURL"
        app:layout_constraintStart_toStartOf="@+id/apiURL"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.791" />

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/username"
        android:text="@string/login_username_label"
        android:textColor="@color/White_Text"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/apiURL"
        app:layout_constraintTop_toBottomOf="@+id/apiURL" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="9dp"
        android:labelFor="@id/password"
        android:text="@string/login_password_label"
        android:textColor="@color/White_Text"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="378dp"
        android:layout_height="58dp"
        android:layout_marginBottom="320dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/login_password_hint"
        android:textColor="@color/hint_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="password" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/Button_Blue"
        android:text="@string/login_button"
        android:textColor="@color/White_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>